--- a/action.yml
+++ b/action.yml
@@ -17,8 +17,8 @@ runs:
       env:
         USERNAME: github-actions[bot]
         EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
-        MESSSAGE: ${{ inputs.messge }}
-        BRANCH: auto:/${{ github.run_id }}/${{ github.run_attempt }}
+        MESSAGE: ${{ inputs.message }}
+        BRANCH: auto/${{ github.run_id }}/${{ github.run_attempt }}
         GITHUB_TOKEN: ${{ github.token }}
       run: |
         echo "branch=${BRANCH}"
@@ -29,4 +29,4 @@ runs:
         git add .
         git commit -m "${MESSAGE}"
         git push origin "${BRANCH}"
-        gh pr create --head "${BRANCH}" --title "${MESSSAGE}" --body "${MESSSAGE}"
+        gh pr create --head "${BRANCH}" --title "${MESSAGE}" --body "${MESSSAGE}"
