ブランチ名の指定がフォーマット違反だったのを修正

--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ runs:
         USERNAME: github-actions[bot]
         EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
         MESSSAGE: ${{ inputs.messge }}
-        BRANCH: auto:/${{ github.run_id }}/${{ github.run_attempt }}
+        BRANCH: auto/${{ github.run_id }}/${{ github.run_attempt }}
         GITHUB_TOKEN: ${{ github.token }}
       run: |
         echo "branch=${BRANCH}"
