--- a/action.yml
+++ b/action.yml
@@ -29,4 +29,4 @@ runs:
         git add .
         git commit -m "${MESSAGE}"
         git push origin "${BRANCH}"
-        gh pr create --head "${BRANCH}" --title "${MESSSAGE}" --body "${MESSSAGE}"
+        gh pr create --head "${BRANCH}" --title "${MESSAGE}" --body "${MESSSAGE}"
