--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         # 作成したTestというタイトルのPRがあるかどうかを確認する
         run: |
           set -x
-          test "$(gh pr view "${BRANCH}" --json title | jq .title)" = "Test"
+          test "$(gh pr view "${BRANCH}" --json title --jq .title)" = "Test"
         env:
           # actionsのoutput値のブランチを指定
           BRANCH: $ {{ steps.excersice.outputts.branch }}
