--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           test "$(gh pr view "${BRANCH}" --json title --jq .title)" = "Test"
         env:
           # actionsのoutput値のブランチを指定
-          BRANCH: $ {{ steps.excersice.outputts.branch }}
+          BRANCH: $ {{ steps.excersice.outputs.branch }}
       - name: teardown
         # always()を指定することでteadownは必ず実行する
         if: ${{ always() }}
@@ -36,4 +36,4 @@ jobs:
           gh pr close "${BRANVH}" || true
           git push origin "${BRANVH}" --delete || true
         env:
-          BRANCH: $ {{ steps.excersice.outputts.branch }}
+          BRANCH: $ {{ steps.excersice.outputs.branch }}
